# custom_openai_model

./: README.md  docker-compose.yml  logs.sh  start.sh  stop.sh
backend/: Dockerfile  backend.env  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx  index.js
frontend/src/components/: AskBox.jsx
frontend/src/components/common/: Button.jsx
frontend/src/components/common/loading/: Loading.jsx
readme_resources/: global_overview.md
training/: training.ipynb  verra.jsonl  verra.txt
