[tool.poetry]
name = "ener_gpt_backend"
version = "0.1.0"
description = ""
authors = ["Alex Doc <alexandru.dochian@forktex.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
openai = "^0.27.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
